# score_feo

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  pre_commit.sh  pre_commit_clean.sh  project_config.bzl  pyproject.toml  rustfmt.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  format.yml  license_check.yml  release.yml
docs/: conf.py
examples/rust/cycle-benchmark/: BUILD.bazel  Cargo.toml  README.md
examples/rust/cycle-benchmark/config/: cycle_bench.json  cycle_bench_0.json  cycle_bench_4.json  cycle_bench_5.json  cycle_bench_6.json
examples/rust/cycle-benchmark/src/: activities.rs  composites.rs  config.rs  lib.rs
examples/rust/mini-adas/: BUILD.bazel  Cargo.toml  README.md  adas_variants.bzl  build.rs
examples/rust/mini-adas/etc/: logging.json  mw_com_config.json  mw_com_config_100.json  mw_com_config_101.json  mw_com_config_102.json
examples/rust/mini-adas/mini-adas-gen/: BUILD.bazel  lib.rs  mini_adas_gen.cpp  mini_adas_gen.h  mini_adas_gen.rs  mini_adas_gen_mw_com.rs
examples/rust/mini-adas/src/: config.rs  ffi.rs  lib.rs
examples/rust/mini-adas/src/activities/: components.rs  input.rs  messages.rs  mod.rs  output.rs
examples/rust/mini-adas/src/cpp/: lane_assist.cpp  trajec_vis.cpp
examples/rust/mini-adas/src/include/: lane_assist.h  trajec_vis.h
feo/: BUILD.bazel  Cargo.toml
feo-com/: BUILD.bazel  Cargo.toml
feo-com/src/: interface.rs  lib.rs
feo-com/src/iox2/: mod.rs
feo-com/src/linux_shm/: mod.rs  shared_memory.rs
feo-cpp-build/: BUILD.bazel  Cargo.toml
feo-cpp-build/src/: lib.rs
feo-cpp-build/src/include/feo_cpp/: feo_macros.h
feo-cpp-macros/: BUILD.bazel  Cargo.toml
feo-cpp-macros/src/: lib.rs
feo-log/: BUILD.bazel  Cargo.toml
feo-log/examples/: hello.rs
feo-log/src/: ffi.rs  lib.rs  log.cc
feo-logger/: BUILD.bazel  Cargo.toml
feo-logger/src/: console.rs  ffi.rs  fmt.rs  lib.rs  logd.rs  record.rs  thread.rs
feo-time/: BUILD.bazel  Cargo.toml
feo-time/examples/: time_speedrun.rs
feo-time/src/: ffi.rs  lib.rs  tests.rs
feo-time/tests/: time_test.cc
feo-tracer/: BUILD.bazel  Cargo.toml
feo-tracer/src/: data.rs  io.rs  lib.rs  main.rs  perfetto.rs  progress.rs
feo-tracing/: BUILD.bazel  Cargo.toml
feo-tracing/examples/: hello_tracing.rs
feo-tracing/src/: lib.rs  protocol.rs  subscriber.rs
feo/src/: activity.rs  cpp.rs  error.rs  ids.rs  lib.rs  os_signals.rs  scheduler.rs  timestamp.rs  topicspec.rs
feo/src/agent/: com_init.rs  mod.rs
feo/src/agent/direct/: mod.rs  primary.rs  primary_mpsc.rs  recorder.rs  secondary.rs
feo/src/agent/relayed/: mod.rs  primary.rs  recorder.rs  secondary.rs
feo/src/recording/: mod.rs  recorder.rs  registry.rs  transcoder.rs
feo/src/signalling/: mod.rs
feo/src/signalling/common/: interface.rs  mod.rs  signals.rs
feo/src/signalling/common/mpsc/: endpoint.rs  mod.rs  primitives.rs  worker.rs
feo/src/signalling/common/socket/: client.rs  connection.rs  mod.rs  server.rs
feo/src/signalling/direct/: mod.rs  recorder.rs  scheduler.rs  worker.rs
feo/src/signalling/direct/mpsc/: mod.rs  scheduler.rs
feo/src/signalling/relayed/: interface.rs  mod.rs  sockets_mpsc.rs
feo/src/signalling/relayed/connectors/: mod.rs  recorder.rs  relays.rs  scheduler.rs  secondary.rs
feo/src/signalling/relayed/mpsc/: endpoint.rs  mod.rs
feo/src/signalling/relayed/sockets/: endpoint.rs  mod.rs
feo/src/worker/: mod.rs
feo/tests/: smoke.rs
logd/: BUILD.bazel  Cargo.toml
logd/examples/: client_packet.rs  client_stream.rs
logd/src/: input.rs  lib.rs  main.rs
main/: genindex.html  index.html  schema_violations.json  search.html
perfetto-model/: BUILD.bazel  build.rs
perfetto-model/src/: lib.rs
pr-1/: index.html
src/feo/: BUILD.bazel  Cargo.toml
src/feo-com/: BUILD.bazel
src/feo-com/src/: interface.rs  lib.rs
src/feo-com/src/iox2/: mod.rs
src/feo-com/src/linux_shm/: mod.rs  shared_memory.rs
src/feo-com/src/mw_com/: mod.rs
src/feo-cpp-build/: Cargo.toml
src/feo-time/: BUILD.bazel
src/feo-time/examples/: time_speedrun.rs
src/feo-time/include/: feo_time.h
src/feo-time/src/: ffi.rs  lib.rs  tests.rs
src/feo-tracer/: BUILD.bazel  Cargo.toml
src/feo-tracer/src/: data.rs  io.rs  lib.rs  main.rs  perfetto.rs  progress.rs
src/feo-tracing/: BUILD.bazel
src/feo-tracing/examples/: hello_tracing.rs
src/feo-tracing/src/: lib.rs  protocol.rs  subscriber.rs
src/feo/Design/: shutdown_sequence.md
src/feo/cpp-src/: mw_com_gen.cpp  mw_com_gen.h
src/feo/src/: activity.rs  cpp.rs  debug_fmt.rs  error.rs  ids.rs  lib.rs  scheduler.rs  timestamp.rs  topicspec.rs
src/feo/src/agent/: com_init.rs  mod.rs
src/feo/src/agent/direct/: mod.rs  primary.rs  primary_mpsc.rs  recorder.rs  secondary.rs
src/feo/src/agent/relayed/: mod.rs  primary.rs  recorder.rs  secondary.rs
src/feo/src/recording/: mod.rs  recorder.rs  registry.rs  transcoder.rs
src/feo/src/signalling/: mod.rs
src/feo/src/signalling/common/: interface.rs  mod.rs  signals.rs
src/feo/src/signalling/common/mpsc/: endpoint.rs  mod.rs  primitives.rs  worker.rs
src/feo/src/signalling/common/socket/: client.rs  connection.rs  mod.rs  server.rs
src/feo/src/signalling/direct/: mod.rs  recorder.rs  scheduler.rs  worker.rs
src/feo/src/signalling/direct/mpsc/: mod.rs  scheduler.rs
src/feo/src/signalling/direct/mw_com/: mod.rs  mw_com_gen.rs  scheduler_connector.rs  worker_connector.rs
src/feo/src/signalling/relayed/: interface.rs  mod.rs  sockets_mpsc.rs
src/feo/src/signalling/relayed/connectors/: mod.rs  recorder.rs  relays.rs  scheduler.rs  secondary.rs
src/feo/src/signalling/relayed/mpsc/: endpoint.rs  mod.rs
src/feo/src/signalling/relayed/sockets/: endpoint.rs  mod.rs
src/feo/src/worker/: mod.rs
src/feo/tests/: smoke.rs
src/logd/: BUILD.bazel
tests/rust/feo_tests/test_agent/: BUILD  Cargo.toml
tests/rust/feo_tests/test_agent/etc/: mw_com_config.json
tests/rust/feo_tests/test_agent/src/: activities.rs  config.rs  main.rs  monitor.rs  primary.rs  scenario.rs  secondary.rs
tools/format/: BUILD.bazel
(+33 files in other folders)
