[workspace]
members = [
    "examples/rust/cycle-benchmark",
    "examples/rust/mini-adas",
    "feo",
    "feo-com",
    "feo-cpp-build",
    "feo-cpp-macros",
    "feo-log",
    "feo-logger",
    "feo-time",
    "feo-tracer",
    "feo-tracing",
    "logd",
    "perfetto-model",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
async-stream = "0.3.6"
bytes = "1.10.1"
cc = "1.2.34"
console = "0.16.0"
env_logger = "0.11.8"
feo = { path = "feo", default-features = false }
feo-com = { path = "feo-com" }
feo-cpp-build = { path = "feo-cpp-build" }
feo-cpp-macros = { path = "feo-cpp-macros" }
feo-log = { path = "feo-log" }
feo-logger = { path = "feo-logger" }
feo-time = { path = "feo-time" }
feo-tracing = { path = "feo-tracing" }
ctrlc = { version = "3.4.4", features = ["termination"] }
futures = "0.3.31"
human_bytes = "0.4.3"
iceoryx2 = "0.5.0"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
libc = "1.0.0-alpha.1"
log = { version = "0.4.27" }
mio = { version = "1.0.4", features = ["net", "os-poll"] }
nix = { version = "0.30.1", features = ["fs", "mman"] }
perfetto-model = { path = "perfetto-model" }
postcard = "1.1.3"
prost = "0.14.1"
prost-build = "0.14.1"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
socket2 = "0.6.0"
time = { version = "0.3.41", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "macros",
    "sync",
    "net",
    "time",
    "signal",
] }
tokio-seqpacket = "0.8.0"
tokio-util = { version = "0.7.16", features = ["codec", "net"] }
tracing = { version = "0.1.41", features = [
    "attributes",
], default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
[profile.profiling]
inherits = "release"
debug = true
