# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "feo",
    version = "0.1",
)

bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0")

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.63.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.1")

# tooling
bazel_dep(name = "score_tooling", version = "1.0.1")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

#docs-as-code
bazel_dep(name = "score_docs_as_code", version = "1.1.0")

# Rust Toolchain
RUST_EDITION = "2021"

RUST_VERSION = "1.83.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "cargo",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//examples/rust/cycle-benchmark:Cargo.toml",
        "//examples/rust/mini-adas:Cargo.toml",
        "//feo:Cargo.toml",
        "//feo-com:Cargo.toml",
        "//feo-cpp-build:Cargo.toml",
        "//feo-cpp-macros:Cargo.toml",
        "//feo-log:Cargo.toml",
        "//feo-logger:Cargo.toml",
        "//feo-time:Cargo.toml",
        "//feo-tracer:Cargo.toml",
        "//feo-tracing:Cargo.toml",
        "//logd:Cargo.toml",
        "//perfetto-model:Cargo.toml",
    ],
)
use_repo(crate, "cargo")
