# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_feo",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.1")

# SCORE bazel module dependencies
bazel_dep(name = "score_tooling", version = "1.1.2")
git_override(
    module_name = "score_tooling",
    commit = "58581abf75b321defbb53ffbad3b65e7f62b5082",
    remote = "https://github.com/eclipse-score/tooling.git",
)

bazel_dep(name = "score_crates", version = "0.0.9")
bazel_dep(name = "score_baselibs_rust", version = "0.1.0")
git_override(
    module_name = "score_baselibs_rust",
    commit = "1b9f2786cd746ae9745dd2e81bf9073b4185a5e2",
    remote = "https://github.com/eclipse-score/baselibs_rust.git",
)

# SCORE communication integration
bazel_dep(name = "score_communication", version = "0.1.2")
git_override(
    module_name = "score_communication",
    commit = "8024d81376e8f3271ebc7624c43fb075d408895f",
    remote = "https://github.com/eclipse-score/communication.git",
)

bazel_dep(name = "score_baselibs", version = "0.2.4")

# TODO: Remove once new baselib release is available https://github.com/eclipse-score/baselibs/issues/138
git_override(
    module_name = "score_baselibs",
    commit = "bd9a138245b7c8bb47bbb9745a3fabc978e3a1b1",
    remote = "https://github.com/eclipse-score/baselibs.git",
)

## TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "trlc",
    commit = "a4f7e95210d8093ba208b91cbc5b681eae8d502b",  # trlc-2.0.3 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "score_logging", version = "0.1.2")
git_override(
    module_name = "score_logging",
    commit = "2833f5d6f28cbd8be1f3037dfa1217aa1ec94848",
    remote = "https://github.com/eclipse-score/logging.git",
)

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

bazel_dep(name = "boost.program_options", version = "1.83.0.bcr.4")

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.68.1-score")
bazel_dep(name = "rules_rust_prost", version = "0.67.0")

# Protobuf
# Repo_name override is needed here for compatibility with WORKSPACE (e.g.for rules_rust_prost)
# Newer protobuf versions generate warnings during compilation which will cause the build failure due
# to treat_warnings_as_errors = ["-Werror"]. If a newer version is required these failures can be
# disabled in our .bazelrc using --(host)per_file_copt=external/.*@-Wno-error.
bazel_dep(name = "protobuf", version = "30.2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Tooling
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "score_docs_as_code", version = "3.0.1")

# Toolchains
bazel_dep(name = "rules_cc", version = "0.2.16")

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.2.2", dev_dependency = True)

# Extensions
gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
)

# Rust toolchain
bazel_dep(name = "score_toolchains_rust", version = "0.4.0", dev_dependency = True)
bazel_dep(name = "score_rust_policies", version = "0.0.5", dev_dependency = True)

# Prost toolchain
register_toolchains("//toolchain/prost:prost_toolchain")

# Python toolchain
bazel_dep(name = "rules_python", version = "1.8.3")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
