# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libfeo_com_rust",
    srcs = [
        "src/interface.rs",
        # Disabled due to compilation error of iceoryx2
        # "src/iox2/mod.rs",
        "src/lib.rs",
        "src/linux_shm/mod.rs",
        "src/linux_shm/shared_memory.rs",
    ],
    crate_features = [
        # bazel has a different concept (select) for optional dependencies than cargo,
        # so we activate all features until we refactor to select
        # Disabled due to compilation error of iceoryx2
        # "ipc_iceoryx2",
        "ipc_linux_shm",
    ],
    crate_name = "feo_com",
    visibility = ["//visibility:public"],
    deps = [
        "//feo-log:libfeo_log_rust",
        # all_crate_deps only contains optional dependencies which are default-activated,
        # so we add all optional dependencies here to be independent of cargo default features
        # Disabled due to compilation error of iceoryx2
        # "@score_crates//:iceoryx2",
        "@score_crates//:nix",
        "@score_crates//:rand",
    ],
)
