# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_static_library", "rust_test")

rust_library(
    name = "libfeo_logger_rust",
    srcs = [
        "src/console.rs",
        "src/fmt.rs",
        "src/lib.rs",
        "src/logd.rs",
        "src/record.rs",
        "src/thread.rs",
    ],
    crate_name = "feo_logger",
    visibility = ["//visibility:public"],
    deps = [
        "//feo-log:libfeo_log_rust",
        "//feo-time:libfeo_time_rust",
        "@score_crates//:console",
        "@score_crates//:libc",
        "@score_crates//:time",
    ],
)

cc_library(
    name = "libfeo_logger_cpp",
    srcs = [
        "include/logger.h",
        "src/logger.cc",
    ],
    hdrs = [
        "include/logger.h",
    ],
    includes = ["include"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        ":libfeo_logger_ffi_rust",
        "//feo-log:libfeo_log_cpp",
    ],
)

# FFI wrapper
rust_static_library(
    name = "libfeo_logger_ffi_rust",
    srcs = [
        "src/ffi.rs",
    ],
    deps = [
        ":libfeo_logger_rust",
        "//feo-log:libfeo_log_rust",
    ],
)

rust_test(
    name = "libfeo_logger_rust_test",
    crate = ":libfeo_logger_rust",
)
