# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "feo_tracer",
    srcs = [
        "src/main.rs",
        "src/progress.rs",
    ],
    crate_name = "feo_tracer",
    visibility = ["//visibility:public"],
    deps = [
        ":libfeo_tracer",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "@score_crates//:anyhow",
        "@score_crates//:argh",
        "@score_crates//:futures",
        "@score_crates//:indicatif",
        "@score_crates//:indicatif_log_bridge",
        "@score_crates//:tokio",
    ],
)

rust_library(
    name = "libfeo_tracer",
    srcs = [
        "src/data.rs",
        "src/io.rs",
        "src/lib.rs",
        "src/perfetto.rs",
    ],
    crate_name = "feo_tracer",
    visibility = ["//visibility:public"],
    deps = [
        "//feo-log:libfeo_log_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "//perfetto-model",
        "@score_crates//:anyhow",
        "@score_crates//:human_bytes",
        "@score_crates//:indicatif",
        "@score_crates//:postcard",
        "@score_crates//:prost",
        "@score_crates//:rand",
        "@score_crates//:tokio",
    ],
)
