# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libfeo_rust",
    srcs = [
        "src/activity.rs",
        "src/agent/com_init.rs",
        "src/agent/direct/mod.rs",
        "src/agent/direct/primary.rs",
        "src/agent/direct/primary_mpsc.rs",
        "src/agent/direct/recorder.rs",
        "src/agent/direct/secondary.rs",
        "src/agent/mod.rs",
        "src/agent/relayed/mod.rs",
        "src/agent/relayed/primary.rs",
        "src/agent/relayed/recorder.rs",
        "src/agent/relayed/secondary.rs",
        "src/cpp.rs",
        "src/error.rs",
        "src/ids.rs",
        "src/lib.rs",
        "src/os_signals.rs",
        "src/recording/mod.rs",
        "src/recording/recorder.rs",
        "src/recording/registry.rs",
        "src/recording/transcoder.rs",
        "src/scheduler.rs",
        "src/signalling/common/interface.rs",
        "src/signalling/common/mod.rs",
        "src/signalling/common/mpsc/endpoint.rs",
        "src/signalling/common/mpsc/mod.rs",
        "src/signalling/common/mpsc/primitives.rs",
        "src/signalling/common/mpsc/worker.rs",
        "src/signalling/common/signals.rs",
        "src/signalling/common/socket/client.rs",
        "src/signalling/common/socket/connection.rs",
        "src/signalling/common/socket/mod.rs",
        "src/signalling/common/socket/server.rs",
        "src/signalling/direct/mod.rs",
        "src/signalling/direct/mpsc/mod.rs",
        "src/signalling/direct/mpsc/scheduler.rs",
        "src/signalling/direct/recorder.rs",
        "src/signalling/direct/scheduler.rs",
        "src/signalling/direct/worker.rs",
        "src/signalling/mod.rs",
        "src/signalling/relayed/connectors/mod.rs",
        "src/signalling/relayed/connectors/recorder.rs",
        "src/signalling/relayed/connectors/relays.rs",
        "src/signalling/relayed/connectors/scheduler.rs",
        "src/signalling/relayed/connectors/secondary.rs",
        "src/signalling/relayed/interface.rs",
        "src/signalling/relayed/mod.rs",
        "src/signalling/relayed/mpsc/endpoint.rs",
        "src/signalling/relayed/mpsc/mod.rs",
        "src/signalling/relayed/sockets/endpoint.rs",
        "src/signalling/relayed/sockets/mod.rs",
        "src/signalling/relayed/sockets_mpsc.rs",
        "src/timestamp.rs",
        "src/topicspec.rs",
        "src/worker/mod.rs",
    ],
    crate_name = "feo",
    visibility = ["//visibility:public"],
    deps = [
        "//feo-com:libfeo_com_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score_crates//:libc",
        "@score_crates//:mio",
        "@score_crates//:signal_hook",
    ],
)

rust_library(
    name = "libfeo_recording_rust",
    srcs = [
        "src/activity.rs",
        "src/agent/com_init.rs",
        "src/agent/direct/mod.rs",
        "src/agent/direct/primary.rs",
        "src/agent/direct/primary_mpsc.rs",
        "src/agent/direct/recorder.rs",
        "src/agent/direct/secondary.rs",
        "src/agent/mod.rs",
        "src/agent/relayed/mod.rs",
        "src/agent/relayed/primary.rs",
        "src/agent/relayed/recorder.rs",
        "src/agent/relayed/secondary.rs",
        "src/cpp.rs",
        "src/error.rs",
        "src/ids.rs",
        "src/lib.rs",
        "src/os_signals.rs",
        "src/recording/mod.rs",
        "src/recording/recorder.rs",
        "src/recording/registry.rs",
        "src/recording/transcoder.rs",
        "src/scheduler.rs",
        "src/signalling/common/interface.rs",
        "src/signalling/common/mod.rs",
        "src/signalling/common/mpsc/endpoint.rs",
        "src/signalling/common/mpsc/mod.rs",
        "src/signalling/common/mpsc/primitives.rs",
        "src/signalling/common/mpsc/worker.rs",
        "src/signalling/common/signals.rs",
        "src/signalling/common/socket/client.rs",
        "src/signalling/common/socket/connection.rs",
        "src/signalling/common/socket/mod.rs",
        "src/signalling/common/socket/server.rs",
        "src/signalling/direct/mod.rs",
        "src/signalling/direct/mpsc/mod.rs",
        "src/signalling/direct/mpsc/scheduler.rs",
        "src/signalling/direct/recorder.rs",
        "src/signalling/direct/scheduler.rs",
        "src/signalling/direct/worker.rs",
        "src/signalling/mod.rs",
        "src/signalling/relayed/connectors/mod.rs",
        "src/signalling/relayed/connectors/recorder.rs",
        "src/signalling/relayed/connectors/relays.rs",
        "src/signalling/relayed/connectors/scheduler.rs",
        "src/signalling/relayed/connectors/secondary.rs",
        "src/signalling/relayed/interface.rs",
        "src/signalling/relayed/mod.rs",
        "src/signalling/relayed/mpsc/endpoint.rs",
        "src/signalling/relayed/mpsc/mod.rs",
        "src/signalling/relayed/sockets/endpoint.rs",
        "src/signalling/relayed/sockets/mod.rs",
        "src/signalling/relayed/sockets_mpsc.rs",
        "src/timestamp.rs",
        "src/topicspec.rs",
        "src/worker/mod.rs",
    ],
    crate_features = ["recording"],
    crate_name = "feo",
    visibility = ["//visibility:public"],
    deps = [
        "//feo-com:libfeo_com_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score_crates//:libc",
        "@score_crates//:mio",
        "@score_crates//:postcard",
        "@score_crates//:serde",
        "@score_crates//:signal_hook",
    ],
)
