# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "logd",
    srcs = [
        "src/main.rs",
    ],
    crate_name = "logd",
    visibility = ["//visibility:public"],
    deps = [
        ":liblogd",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "@score_crates//:anyhow",
        "@score_crates//:tokio",
    ],
)

rust_library(
    name = "liblogd",
    srcs = [
        "src/input.rs",
        "src/lib.rs",
    ],
    crate_name = "logd",
    visibility = ["//visibility:public"],
    deps = [
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "@score_crates//:anyhow",
        "@score_crates//:async_stream",
        "@score_crates//:bytes",
        "@score_crates//:futures",
        "@score_crates//:tokio",
        "@score_crates//:tokio_seqpacket",
        "@score_crates//:tokio_util",
    ],
)

rust_test(
    name = "liblogd_test",
    crate = ":liblogd",
)
