# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "perfetto_proto",
    srcs = glob(["protos/**/*.proto"]),
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "perfetto_proto_rust",
    proto = ":perfetto_proto",
)

rust_library(
    name = "perfetto-model",
    srcs = ["src/lib.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":perfetto_proto_rust",
        "@score_crates//:prost",
    ],
)
