# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libfeo_com_rust_mw_com",
    srcs = [
        "src/interface.rs",
        # Disabled due to compilation error of iceoryx2
        # "src/iox2/mod.rs",
        "src/lib.rs",
        "src/linux_shm/mod.rs",
        "src/linux_shm/shared_memory.rs",
        "src/mw_com/mod.rs",
    ],
    crate_features = [
        # Disabled due to compilation error of iceoryx2
        # "ipc_iceoryx2",
        "ipc_linux_shm",
        "ipc_mw_com",
    ],
    crate_name = "feo_com",
    visibility = ["//visibility:public"],
    deps = [
        # Disabled due to compilation error of iceoryx2
        # "@score_crates//:iceoryx2",
        "@score_crates//:nix",
        "@score_crates//:rand",
        "@score_baselibs_rust//src/log/score_log",
        "@score_communication//score/mw/com/impl/rust/com-api/com-api",
    ],
)

rust_library(
    name = "libfeo_com_rust",
    srcs = [
        "src/interface.rs",
        # Disabled due to compilation error of iceoryx2
        # "src/iox2/mod.rs",
        "src/lib.rs",
        "src/linux_shm/mod.rs",
        "src/linux_shm/shared_memory.rs",
    ],
    crate_features = [
        # Disabled due to compilation error of iceoryx2
        # "ipc_iceoryx2",
        "ipc_linux_shm",
    ],
    crate_name = "feo_com",
    visibility = ["//visibility:public"],
    deps = [
        # Disabled due to compilation error of iceoryx2
        # "@score_crates//:iceoryx2",
        "@score_crates//:nix",
        "@score_crates//:rand",
        "@score_baselibs_rust//src/log/score_log",
    ],
)
