# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "libfeo_tracing_rust",
    srcs = [
        "src/lib.rs",
        "src/protocol.rs",
        "src/subscriber.rs",
    ],
    crate_name = "feo_tracing",
    visibility = ["//visibility:public"],
    deps = [
        "//src/feo-log:libfeo_log_rust",
        "@score_crates//:libc",
        "@score_crates//:postcard",
        "@score_crates//:serde",
        "@score_crates//:tracing",
        "@score_crates//:tracing_subscriber",
    ],
)

rust_binary(
    name = "feo_tracing_example_rust",
    srcs = [
        "examples/hello_tracing.rs",
    ],
    deps = [
        ":libfeo_tracing_rust",
        "//src/feo-log:libfeo_log_rust",
        "//src/feo-logger:libfeo_logger_rust",
        "@score_crates//:tracing",
    ],
)
