# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libfeo_rust",
    srcs = [
        "src/activity.rs",
        "src/agent/com_init.rs",
        "src/agent/direct/mod.rs",
        "src/agent/direct/primary.rs",
        "src/agent/direct/primary_mpsc.rs",
        "src/agent/direct/secondary.rs",
        "src/agent/mod.rs",
        "src/agent/relayed/mod.rs",
        "src/agent/relayed/primary.rs",
        "src/agent/relayed/secondary.rs",
        "src/cpp.rs",
        "src/debug_fmt.rs",
        "src/error.rs",
        "src/ids.rs",
        "src/lib.rs",
        "src/scheduler.rs",
        "src/signalling/common/interface.rs",
        "src/signalling/common/mod.rs",
        "src/signalling/common/mpsc/endpoint.rs",
        "src/signalling/common/mpsc/mod.rs",
        "src/signalling/common/mpsc/primitives.rs",
        "src/signalling/common/mpsc/worker.rs",
        "src/signalling/common/signals.rs",
        "src/signalling/common/socket/client.rs",
        "src/signalling/common/socket/connection.rs",
        "src/signalling/common/socket/mod.rs",
        "src/signalling/common/socket/server.rs",
        "src/signalling/direct/mod.rs",
        "src/signalling/direct/mpsc/mod.rs",
        "src/signalling/direct/mpsc/scheduler.rs",
        "src/signalling/direct/mw_com/mod.rs",
        "src/signalling/direct/mw_com/mw_com_gen.rs",
        "src/signalling/direct/mw_com/scheduler_connector.rs",
        "src/signalling/direct/mw_com/worker_connector.rs",
        "src/signalling/direct/scheduler.rs",
        "src/signalling/direct/worker.rs",
        "src/signalling/mod.rs",
        "src/signalling/relayed/connectors/mod.rs",
        "src/signalling/relayed/connectors/relays.rs",
        "src/signalling/relayed/connectors/scheduler.rs",
        "src/signalling/relayed/connectors/secondary.rs",
        "src/signalling/relayed/interface.rs",
        "src/signalling/relayed/mod.rs",
        "src/signalling/relayed/mpsc/endpoint.rs",
        "src/signalling/relayed/mpsc/mod.rs",
        "src/signalling/relayed/sockets/endpoint.rs",
        "src/signalling/relayed/sockets/mod.rs",
        "src/signalling/relayed/sockets_mpsc.rs",
        "src/timestamp.rs",
        "src/topicspec.rs",
        "src/worker/mod.rs",
    ],
    crate_name = "feo",
    visibility = ["//visibility:public"],
    deps = [
        ":mw_com_gen_cpp",
        "//src/feo-com:libfeo_com_rust_mw_com",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_communication//score/mw/com/impl/rust/com-api/com-api",
        "@score_crates//:ctrlc",
        "@score_crates//:futures",
        "@score_crates//:libc",
        "@score_crates//:mio",
        "@score_crates//:tokio",
    ],
)

cc_library(
    name = "mw_com_gen_cpp",
    srcs = [
        "cpp-src/mw_com_gen.cpp",
    ],
    hdrs = [
        "cpp-src/mw_com_gen.h",
    ],
    features = [
        "treat_warnings_as_errors",
        "additional_warnings",
        "strict_warnings",
    ],
    implementation_deps = [
        "@score_communication//score/mw/com/impl/rust/com-api/com-api-ffi-lola:registry_bridge_macro_cpp",
    ],
    alwayslink = True,
)
